--- a/src/components/MenuNavigation/MenuNavigation.css
+++ b/src/components/MenuNavigation/MenuNavigation.css
@@ -1,9 +1,9 @@
 .sideFlap{
 padding: 4%;
-width: 180px;
+width: 185px;
 height: 95vh;
 background-image: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%);
-border-radius: 30px;
+border-radius: 50px;
 }
 
 #navTabUl{
@@ -15,8 +15,8 @@ text-align: center;
 padding-top: 5%;
 margin-bottom: 40%;
 margin-top: 40px;
-height: 36px;
-width: 160px;
+height: 39px;
+width: 168px;
 background-color: white;
 color: #3770aa;
 font-family: 'Bitter', serif;
@@ -33,15 +33,24 @@ box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.2);
 
 .icon-text {
   display: flex;
-  align-items: center; /* Centre verticalement le contenu */
+  align-items: center; 
+  margin-left: 5px;
 }
 
 .icon {
   margin-left: 7px;
-  width: 20px; /* Largeur souhaitée de l'icône */
-  height: 20px; /* Hauteur souhaitée de l'icône */
-  margin-right: 10px; /* Marge à droite de l'icône pour l'espacement */
+  width: 25px; 
+  height: 25px; 
+  margin-right: 10px; 
 }
+
+.icon.monCarnet{
+  width: 32px; 
+  height: 28px;
+ 
+  
+}
+
 
 .navTab:hover{
 color: #ffffff;
