--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,20 +1,9 @@
 /*Mon fichier app.css*/
 
 .app {
-  max-width: 100%;
-  margin: 1em auto;
+  height: 100%;
+  width: 100%;
   text-align: center;
   display: flex;
-}
-
-.container {
-  display: flex;
-  align-items: center;
-  justify-content: space-between; /* Les éléments seront espacés également horizontalement */
   background-color: #f2f2f2;
-  padding: 20px;
-}
-
-.app.constantTab:nth-child(2) {
-  background: linear-gradient(to right, #ff0000, #ff00ff);
 }
