--- a/src/components/ConstantTab/ConstantTab.css
+++ b/src/components/ConstantTab/ConstantTab.css
@@ -1,22 +1,75 @@
 /* Mon fichier ConstantTab.css */
 
-.constantTab.secondTab {
-  background: linear-gradient(to right, #ebe3e3, #f30707); /* Couleur de fond personnalisée pour la deuxième instance de ConstantTab */
-}
-
 .constantTab{
   height: 120px;
   width: 210px;
-  margin-left: 300px;
+  margin-left: 90px;
+  margin-top: 2.5%;
   border-radius: 10px;
-background: linear-gradient(to right, #f4c4f3, #fc67fa);
 opacity: 0.7;
-box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.2);
+
+
+font-size: large;
+text-align: center;
+line-height:110px;
+font-weight:bolder;
+color: aliceblue;
+text-shadow: rgb(85, 83, 81) 1px 15 5px;
+filter: brightness(1.05);
 }
 
 
-.constantTab:hover{
-  box-shadow: 6px 6px 20px rgba(92, 88, 88, 0.9);
+
+
+.constantTab.firstTab {
+
+  background: #C898FF;
+  box-shadow: 03px 15px 30px rgba(238, 2, 247, 0.23);
 }
 
+.constantTab.secondTab {
+  background: #ec7a9c; 
+  box-shadow: 03px 15px 30px rgba(247, 2, 2, 0.23);
+}
 
+.constantTab.thirdTab {
+  background:  #39daa4;
+  box-shadow: 03px 15px 30px rgba(2, 247, 55, 0.384);
+ 
+}
+
+.constantTab.fourthTab {
+  background: #dad23e;
+  box-shadow: 03px 15px 30px rgba(247, 231, 2, 0.349);
+}
+
+.constantTab.fifthTab {
+
+  background: #5dcde0;
+  box-shadow: 03px 15px 30px rgba(7, 130, 230, 0.22);
+}
+
+.constantTab.firstTab:hover{
+  box-shadow: 6px 6px 20px rgb(229, 79, 235);
+  
+}
+
+.constantTab.secondTab:hover{
+  box-shadow: 6px 6px 20px rgba(253, 37, 91, 0.9);
+  
+}
+
+.constantTab.thirdTab:hover{
+  box-shadow: 6px 6px 20px rgba(21, 230, 108, 0.9);
+  
+}
+
+.constantTab.fourthTab:hover{
+  box-shadow: 6px 6px 20px rgba(255, 166, 0, 0.9);
+  
+}
+
+.constantTab.fifthTab:hover{
+  box-shadow: 6px 6px 20px rgba(8, 228, 228, 0.9);
+  
+}
