--- a/src/components/SectionTop/SectionTop.css
+++ b/src/components/SectionTop/SectionTop.css
@@ -1,12 +1,13 @@
-/* Mon fichier Graph.css */
+/* Mon fichier Top.css */
 
-.Graph{
+.SectionTop{
+ 
   
   
-height: 510px;
-width: 1000px;
-margin-right: 470px;
-margin-top: 215px;
+height: 250px;
+width:300px;
+margin-right: 60px;
+margin-top: 480px;
   position: absolute;
   top: 0;
   right: 0;
@@ -16,8 +17,8 @@ margin-top: 215px;
 
 }
 
-#imgGraph {
+#imgSectionTop {
   width: 100%; /* Ajuste la largeur de l'image pour éviter le débordement */
-  max-height: 100%; /* Ajuste la hauteur de l'image pour éviter le débordement */
+  height: 100%; /* Ajuste la hauteur de l'image pour éviter le débordement */
   border-radius: 10px;
 }
