--- a/src/components/Dashboard/ConstantTab/ConstantTab.css
+++ b/src/components/Dashboard/ConstantTab/ConstantTab.css
@@ -6,46 +6,79 @@
   margin-left: 90px;
   margin-top: 2.5%;
   border-radius: 10px;
-opacity: 0.7;
-
-
+opacity: 0.85;
 font-size: large;
 text-align: center;
-line-height:110px;
+line-height:1.6;
 font-weight:bolder;
-color: aliceblue;
-text-shadow: rgb(85, 83, 81) 1px 15 5px;
-filter: brightness(1.05);
+color: rgb(255, 255, 255);
 }
 
+.flex-logo-text{
+  display: flex;
+   position: relative;
+}
 
+.logo-tab {
+  margin-left: 7px;
+  width: 50px; 
+  height: 50px; 
+  margin-right: 8px; 
+  margin-top: 1px;
 
+}
+
+.title-tab{
+  margin-top: 7px;
+  color: rgba(141, 152, 153, 0.863);
+}
+
+.text-tab{
+margin-left: 30px;
+margin-top: 12px;
+font-size: 20px;
+}
+
+.text-tab.coeur{
+margin-left: 17px;
+margin-top: 5px;
+font-size: 18px;
+}
+
+.text-date-time{
+font-size: 13px;
+  position: absolute;
+  top: 62px;
+  right: 4px;
+   color: rgba(141, 152, 153, 0.863);
+  
+}
 
 .constantTab.firstTab {
 
-  background: #C898FF;
+  background: #c898ffbe;
   box-shadow: 03px 15px 30px rgba(238, 2, 247, 0.23);
 }
 
 .constantTab.secondTab {
-  background: #ec7a9c; 
+  background: #f8aec4; 
   box-shadow: 03px 15px 30px rgba(247, 2, 2, 0.23);
 }
 
 .constantTab.thirdTab {
-  background:  #39daa4;
+  background:  #39daa4b9;
   box-shadow: 03px 15px 30px rgba(2, 247, 55, 0.384);
  
 }
 
 .constantTab.fourthTab {
-  background: #dad23e;
+  background: #d3d03cd7;
   box-shadow: 03px 15px 30px rgba(247, 231, 2, 0.349);
 }
 
 .constantTab.fifthTab {
 
-  background: #5dcde0;
+  background: #5dcce0b7;
   box-shadow: 03px 15px 30px rgba(7, 130, 230, 0.22);
 }
 
@@ -73,3 +106,4 @@ filter: brightness(1.05);
   box-shadow: 6px 6px 20px rgba(8, 228, 228, 0.9);
   
 }
+
