--- a/src/components/MenuNavigation/MenuNavigation.css
+++ b/src/components/MenuNavigation/MenuNavigation.css
@@ -20,7 +20,7 @@ margin-bottom: 40%;
 margin-top: 40px;
 height: 39px;
 width: 168px;
-background-color: white;
+background-color: rgba(255, 255, 255, 0.945);
 color: #3770aa;
 font-family: 'Bitter', serif;
 font-weight:bolder;
