--- a/src/components/MonCarnet/MonCarnet.css
+++ b/src/components/MonCarnet/MonCarnet.css
@@ -1,3 +1,5 @@
+/* Mon fichier MonCarnet.css */
+
 .container-mon-carnet{
 position: relative;
 
@@ -10,9 +12,11 @@ position: relative;
 
 
   width: 400px;
-  background: linear-gradient(#e7f8f7, #a3cad6) padding-box,
+ 
+  background: linear-gradient( #62e4e9 0%, #3d7dc7 100%) padding-box,
               linear-gradient(145deg, transparent 35%,#e81cff, #40c9ff) border-box;
-  border: 2px solid transparent;
+  opacity: 0.9;
+  border: 5px solid transparent;
   padding: 32px 24px;
   font-size: 14px;
   font-family: inherit;
@@ -24,21 +28,9 @@ position: relative;
   border-radius: 16px;
   background-size: 200% 100%;
   animation: gradient 5s ease infinite;
+  
 }
 
-@keyframes gradient {
-  0% {
-    background-position: 0% 50%;
-  }
-
-  50% {
-    background-position: 100% 50%;
-  }
-
-  100% {
-    background-position: 0% 50%;
-  }
-}
 
 .form-container button:active {
   scale: 0.95;
@@ -59,18 +51,18 @@ position: relative;
 .form-container .form-group label {
   display: block;
   margin-bottom: 5px;
-  color: #717171;
+  color: #fcfcfc;
   font-weight: 600;
-  font-size: 12px;
+  font-size: 13px;
 }
 
 .form-container .form-group input {
   width: 100%;
   padding: 12px 16px;
   border-radius: 8px;
-  color: #000000;
+  color: #050505;
   font-family: inherit;
-  background-color: transparent;
+  
   border: 1px solid #414141;
 }
 
@@ -125,4 +117,81 @@ position: relative;
 }
 
 
+.button-add{
+  display: flex;
+  align-items:center;
+  justify-content: center;
+  align-self: center;
+  font-family: inherit;
+  color: #486d7e;
+  font-weight: 600;
+  width: 30%;
+  background: #92ebd79f;
+  border: 1px solid #414141;
+  padding: 6px 6px 6px 6px;
+  font-size: inherit;
+  gap: 4px;
+  margin-top: 0px;
+  cursor: pointer;
+  border-radius: 6px;
+}
 
+.form-container .button-add:hover {
+  background-color: #fff;
+  border-color: #fff;
+}
+
+/* healthInformation */
+
+/* Mettez à jour votre fichier CSS pour la carte healthInformation */
+.card {
+    position: absolute;
+  top: 62px;
+  left: 900px;
+
+
+  height: 600px;
+  width: 600px;
+ 
+  background: linear-gradient( #62e4e9 0%, #3d7dc7 100%) padding-box,
+              linear-gradient(145deg, transparent 35%,#e81cff, #40c9ff) border-box;
+  opacity: 0.9;
+  border: 5px solid transparent;
+  padding: 32px 24px;
+  font-size: 14px;
+  font-family: inherit;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  box-sizing: border-box;
+  border-radius: 16px;
+  background-size: 200% 100%;
+  animation: gradient 5s ease infinite;
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+
+  50% {
+    background-position: 100% 50%;
+  }
+
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+#title-MonCarnet{
+  font-size: 30px;
+  font: bold;
+  margin-bottom: 60px;
+}
+
+.part-card-form{
+  padding: 5%;
+    font-size: large;
+  font: bold;
+}
