--- a/src/components/Symptome/Symptome.css
+++ b/src/components/Symptome/Symptome.css
@@ -1,1 +1,60 @@
+/* Mon fichier MonCarnet.css */
+
+.container-mon-carnet{
+position: relative;
+
+}
+
+
+.card {
+    position: absolute;
+  top: 62px;
+  left: 900px;
+
+
+  height: 600px;
+  width: 600px;
+ 
+  background: linear-gradient( #62e4e9 0%, #3d7dc7 100%) padding-box,
+              linear-gradient(145deg, transparent 35%,#e81cff, #40c9ff) border-box;
+  opacity: 0.9;
+  border: 5px solid transparent;
+  padding: 32px 24px;
+  font-size: 14px;
+  font-family: inherit;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  box-sizing: border-box;
+  border-radius: 16px;
+  background-size: 200% 100%;
+  animation: gradient 5s ease infinite;
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+
+  50% {
+    background-position: 100% 50%;
+  }
+
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+#title-MonCarnet{
+  font-size: 30px;
+  font: bold;
+  margin-bottom: 15px;
+}
+
+.part-card-form{
+  padding: 1%;
+    font-size: large;
+  font: bold;
+}
 
