--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,11 +1,11 @@
 /*Mon fichier app.css*/
-
-.app {
+html, body {
   height: 100%;
-  width: 100%;
-  text-align: center;
-  display: flex;
-  background-color: #f2f2f2;
+  margin: 0;
+  padding: 0;
+}
+.app {  
+  background-color: #ffffff;
 }
 
 /* CSS du bouton de logout */
@@ -30,6 +30,7 @@
   transition-duration: .3s;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
   background-color: rgb(100, 180, 156);
+  z-index: 4;
 }
 
 
@@ -104,6 +105,7 @@
   transition-duration: .3s;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
   background-color: rgb(62, 167, 194);
+  z-index: 4; 
 }
 
 /* plus sign */
