--- a/src/components/MonCarnet/MonCarnet.css
+++ b/src/components/MonCarnet/MonCarnet.css
@@ -1,5 +1,6 @@
 /* Mon fichier MonCarnet.css */
 
+
 .mon-carnet-container{
 display: flex;
 
@@ -7,13 +8,11 @@ display: flex;
 
 .form-container {
   margin-top: 62px; 
-  margin-left: 300px;
+  margin-left: 150px;
+  margin-right: 200px;
   display: flex; 
   flex-direction: column; 
-
-
   width: 400px;
- 
   background: linear-gradient( #62e4e9 0%, #3d7dc7 100%) padding-box,
               linear-gradient(145deg, transparent 35%,#e81cff, #40c9ff) border-box;
   opacity: 0.9;
@@ -52,7 +51,7 @@ display: flex;
 .form-container .form-group label {
   display: block;
   margin-bottom: 5px;
-  color: #fcfcfc;
+  color: #f5f4f7;
   font-weight: 600;
   font-size: 13px;
 }
